@@ -1,3 +1,8 @@
+2003-10-28  Gary Thomas  <gary@mlbassoc.com>
+
+	* src/vectors.S: Revert change to interrupt handling (see below) which
+	was over-exuberant on platforms without MMU (but with FP).
+
 2003-09-19  Gary Thomas  <gary@mlbassoc.com>
 
 	* src/vectors.S: Respect initial MMU settings when handling interrupts
